Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -166,6 +166,9 @@ footer {
 		height: auto;
 		border: none;
 		}
+	.title {
+		margin-top: 40px;
+		}
 	.wrapper {
 		top: 0;
 		position: absolute;
@@ -176,9 +179,9 @@ footer {
 		background-attachment: scroll;
 		}
 	section {
-		margin: 0px;
+		margin: 0 0 40px 0;
 		float: none;
-	  	padding: 0 0 20px 0;
+	  	padding: 0;
 		top: 1px;
 		width: auto;
 		height: auto;
